[package]
name = "deluxe"
version = "0.2.0"
edition = "2021"
description = "Procedural macro attribute parser"
license = "MIT"
documentation = "https://docs.rs/deluxe"
homepage = "https://github.com/jf2048/deluxe"
repository = "https://github.com/jf2048/deluxe.git"
readme = "README.md"
keywords = ["macros", "derive", "attributes"]
include = ["/src", "/tests", "/README.md", "/COPYING"]

[features]
default = ["proc-macro"]
proc-macro = ["syn/proc-macro"]

[dependencies]
once_cell = "1.13.0"
proc-macro2 = "1.0.38"
syn = { version = "1.0.96", features = ["full", "parsing"], default-features = false }
deluxe-core = { path = "./core", version = "0.2.0" }
deluxe-macros = { path = "./macros", version = "0.2.0" }

[dev-dependencies]
quote = "1.0.18"

[workspace]
members = ["core", "macros"]
