[package]
name = "deluxe-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
arrayvec = "0.7.2"
bitflags = "1.3.2"
proc-macro2 = "1.0.38"
quote = "1.0.18"
strsim = "0.10.0"
syn = { version = "1.0.96", features = ["clone-impls", "derive", "extra-traits", "full", "parsing", "printing"], default-features = false }
