[package]
name = "deluxe-core"
version = "0.3.2"
edition = "2021"
description = "Core traits and helpers for Deluxe procedural macro attribute parser"
license = "MIT"
documentation = "https://docs.rs/deluxe-core"
homepage = "https://github.com/jf2048/deluxe"
repository = "https://github.com/jf2048/deluxe.git"

[lib]
path = "lib.rs"

[dependencies]
arrayvec = "0.7.2"
bitflags = "1.3.2"
proc-macro2 = "1.0.38"
quote = "1.0.18"
strsim = "0.10.0"
syn = { version = "1.0.96", features = ["clone-impls", "derive", "extra-traits", "full", "parsing", "printing"], default-features = false }
