[package]
name = "deluxe-macros"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
heck = "0.4.0"
if_chain = "1.0.2"
proc-macro2 = "1.0.38"
proc-macro-crate = "1.1.3"
proc-macro-error = "1.0.4"
quote = "1.0.18"
syn = { version = "1.0.96", features = ["full", "parsing"], default-features = false }
deluxe-core = { path = "../core", version = "0.1.0" }

[dev-dependencies]
deluxe = { path = "..", version = "0.1.0" }
