[package]
name = "deluxe-macros"
version = "0.1.0"
edition = "2021"
description = "Derive macros for Deluxe procedural macro attribute parser"
license = "MIT"
documentation = "https://docs.rs/deluxe-macros"
homepage = "https://github.com/jf2048/deluxe"
repository = "https://github.com/jf2048/deluxe.git"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
heck = "0.4.0"
if_chain = "1.0.2"
proc-macro2 = "1.0.38"
proc-macro-crate = "1.1.3"
quote = "1.0.18"
syn = { version = "1.0.96", features = ["full", "parsing"], default-features = false }
deluxe-core = { path = "../core", version = "0.1.0" }
